Added Jeds second visual'

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -1144,7 +1144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "07aedfc9-5c8d-4bd5-9bae-1b780ca84417",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "dd0aff64-c246-4223-b3d0-b6c5d2f9438e",
    "metadata": {},
    "outputs": [
@@ -1152,7 +1160,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jed's Visuals Successfully Exported to HTML\n"
+      "Jed's Maps Successfully Exported to HTML -- Filename: 'company_pay_maps.html'\n",
+      "Jed's Bar Chart Successfully saved -- Filename: 'pop_tech.png'\n"
      ]
     }
    ],
@@ -1165,6 +1174,43 @@
     "    today = dt.datetime.strftime(dt.datetime.today().date(), '%b %d, %Y')\n",
     "    state_code_path = 'https://raw.githubusercontent.com/jedc4xer/abs_group_assessment/main/data/state_codes.csv'\n",
     "    state_codes = pd.read_csv(state_code_path)\n",
+    "    \n",
+    "    def build_bar_chart():\n",
+    "        subset = bus_tech_df[(bus_tech_df['industry'] == 'Total for all sectors')][['name','firmpdemp','techuse_label']]\n",
+    "        subset[['tech','usage']] = subset.apply(lambda row: row['techuse_label'].split(\":\"), axis = 1, result_type = 'expand')\n",
+    "        subset = subset[(subset['usage'].str.contains('Total R|High'))]\n",
+    "        subset = subset[(subset['name']) == 'Minnesota'][['firmpdemp','tech','usage']]\n",
+    "        subset['total_respondents'] = subset.groupby(by = ['tech'])['firmpdemp'].transform('max')\n",
+    "        subset = subset[(subset['usage'].str.contains('High use'))]\n",
+    "        subset['rate_of_high_use'] = 100 * (subset['firmpdemp'] / subset['total_respondents'])\n",
+    "        subset.sort_values(by = 'rate_of_high_use', ascending = False, inplace = True)\n",
+    "\n",
+    "        fig = plt.figure(figsize = (18,5))\n",
+    "\n",
+    "        plt.title('Popular Tech Solutions in Minnesota', fontsize = 20, loc = 'left')\n",
+    "        ax = sns.barplot(data = subset, x = 'rate_of_high_use', y = 'tech', palette = 'flare',\n",
+    "                        edgecolor = 'grey')\n",
+    "        ax.set_ylabel('')\n",
+    "        ax.set_xlabel('')\n",
+    "        ax.set_yticklabels(ax.get_yticklabels(), size = 12)\n",
+    "        ax.tick_params(bottom = False)\n",
+    "        for c in ax.containers:\n",
+    "            labels = []\n",
+    "            for v in c:\n",
+    "                if (h := v.get_width()) > 14:\n",
+    "                    lab = f'{(h/100)*100:0.1f}% of reporting companies'\n",
+    "                elif (h := v.get_width()) > .8:\n",
+    "                    lab = f'{(h/100)*100:0.1f}%'\n",
+    "                else:\n",
+    "                    lab = f'{\" \"*16}- {(h/100)*100:0.2f}%'\n",
+    "                labels.append(lab)\n",
+    "\n",
+    "            ax.bar_label(c,labels=labels,label_type = 'center',fontsize = 18,color= 'black', weight = 'bold')\n",
+    "        ax.set(xticklabels = [])\n",
+    "        sns.despine(left = True, bottom = True)\n",
+    "        fig.savefig('pop_tech.png')\n",
+    "        plt.close()\n",
+    "        print(\"Jed's Bar Chart Built and Saved -- Filename: 'pop_tech.png'\")\n",
     "    \n",
     "    def clean_for_map(df, target = 'industry'):\n",
     "        if target not in ['gender','race_group_label','industry']:\n",
@@ -1245,26 +1291,30 @@
     "        #mapfig.write_html(f'highest_avg_pay_{save_label}.html')\n",
     "        #mapfig.show()\n",
     "        return mapfig\n",
-    "\n",
-    "    reasons = ['gender','race_group_label','industry']\n",
-    "    maps = []\n",
-    "    for reason in reasons:\n",
-    "        maps.append(plot_maps(comp_sum_df, reason))\n",
-    "\n",
-    "    with open('company_pay_maps.html', 'w') as mapfile:\n",
-    "        for fig in maps:\n",
-    "            mapfile.write(fig.to_html(full_html = False, include_plotlyjs='cdn'))\n",
-    "        mapfile.close()\n",
     "    \n",
-    "    print(\"Jed's Visuals Successfully Exported to HTML\")\n",
+    "    def build_maps():\n",
+    "        reasons = ['gender','race_group_label','industry']\n",
+    "        maps = []\n",
+    "        for reason in reasons:\n",
+    "            maps.append(plot_maps(comp_sum_df, reason))\n",
     "\n",
+    "        with open('company_pay_maps.html', 'w') as mapfile:\n",
+    "            for fig in maps:\n",
+    "                mapfile.write(fig.to_html(full_html = False, include_plotlyjs='cdn'))\n",
+    "            mapfile.close()\n",
+    "        print(\"Jed's Maps Successfully Exported to HTML -- Filename: 'company_pay_maps.html'\")\n",
+    "        \n",
+    "    build_maps()    \n",
+    "    build_bar_chart()\n",
+    "    \n",
+    "    \n",
     "# run my visual function and pass in the dataframe\n",
     "jeds_visuals() # <--- This is the code to create my visuals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "76546f2a-b56e-4dac-9c73-f421f5f1217a",
    "metadata": {},
    "outputs": [],
@@ -1282,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c8dfb738-f89b-42be-933c-44f03a29d3f9",
    "metadata": {},
    "outputs": [],
