Saving Jed's Updates

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "dd0aff64-c246-4223-b3d0-b6c5d2f9438e",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,62 @@
      "output_type": "stream",
      "text": [
       "Jed's Maps Successfully Exported to HTML -- Filename: 'company_pay_maps.html'\n",
-      "Jed's Bar Chart Successfully saved -- Filename: 'pop_tech.png'\n"
+      "Jed's Bar Chart Built and Saved -- Filename: 'pop_tech.png'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Work\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3641: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\Work\\anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py:311: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\Work\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:5039: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\Work\\AppData\\Local\\Temp/ipykernel_29584/3438619766.py:63: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "< - Balance work and family - ->\n",
+      "<  - Best avenue for ideas -  ->\n",
+      "< - Carry on family business - >\n",
+      "<-  - Couldn't find a job -  -->\n",
+      "<-  -  - Flexible hours -  -  ->\n",
+      "< Friend or family role model ->\n",
+      "<-  -  - Greater income -  -  ->\n",
+      "< -  - Help my community -  - ->\n",
+      "< -  -  -  - Other -  -  -  - ->\n",
+      "<  - Start my own business -  ->\n",
+      "< - Wanted to be my own boss - >\n",
+      "<-  -  - Work for self -  -  -->\n",
+      "Jed's Stacked Bar Chart Successfully exported to HTML - Filename: 'stacked_reasons.html'\n"
      ]
     }
    ],
@@ -1174,6 +1229,98 @@
     "    today = dt.datetime.strftime(dt.datetime.today().date(), '%b %d, %Y')\n",
     "    state_code_path = 'https://raw.githubusercontent.com/jedc4xer/abs_group_assessment/main/data/state_codes.csv'\n",
     "    state_codes = pd.read_csv(state_code_path)\n",
+    "    \n",
+    "    \n",
+    "    def stacked_bar():\n",
+    "        reason_owned = bus_own_df[\n",
+    "            (bus_own_df['qdesc_label'] == 'REASONOWN') &\n",
+    "            (~bus_own_df['industry'].str.contains('Total')) &\n",
+    "            (~bus_own_df['gender'].str.contains('All')) &\n",
+    "            (bus_own_df['ownchar_label'].str.contains(':'))]\n",
+    "\n",
+    "        reason_owned[['reason','importance']] = reason_owned.apply(\n",
+    "            lambda row: row['ownchar_label'].split(\":\"), axis = 1, result_type = 'expand'\n",
+    "        )\n",
+    "\n",
+    "        reason_owned = reason_owned[['industry','gender','reason','importance','ownpdemp']]\n",
+    "\n",
+    "        grouped_reason = reason_owned.groupby(\n",
+    "            by = ['industry','reason','importance'])[['ownpdemp']].agg(\n",
+    "            responses = ('ownpdemp', 'sum')\n",
+    "        )\n",
+    "\n",
+    "        grouped_reason['ratio'] = 100 * (grouped_reason['responses'] / grouped_reason.groupby(level = [0,1])['responses'].transform('sum'))\n",
+    "        grouped_reason['ratio'] = grouped_reason['ratio'].round(2)\n",
+    "        grouped_reason.reset_index(inplace = True)\n",
+    "\n",
+    "        accom_subset = grouped_reason[(grouped_reason['industry'].str.contains('inanc|ducati'))]\n",
+    "        accom_subset.sort_values(by = ['importance','ratio'], ascending = False, inplace = True)\n",
+    "        accom_subset.rename(columns = {'ratio': 'Percent of Total'}, inplace = True)\n",
+    "        picked_industry = accom_subset['industry'].unique().tolist()\n",
+    "\n",
+    "        reasons = grouped_reason.reason.unique().tolist()\n",
+    "        longest_reason = max(reasons, key = len)\n",
+    "        longest_reason = \"<\" + longest_reason + \">\"\n",
+    "        longest_reason = len(longest_reason)\n",
+    "        new_reasons = {}\n",
+    "        for reason in reasons:\n",
+    "            old_reason = reason\n",
+    "            if len(reason) != longest_reason:\n",
+    "                reason = \" \" + reason + \" \"\n",
+    "                cntr = 0\n",
+    "            while len(reason) < longest_reason:\n",
+    "                if cntr % 3 == 0:\n",
+    "                    reason = \"-\" + reason + \"-\"\n",
+    "                else:\n",
+    "                    reason = \" \" + reason + \" \"\n",
+    "                cntr += 1\n",
+    "\n",
+    "            if len(reason) < 30:\n",
+    "                reason = reason + \"-\"\n",
+    "            reason = \"<\" + reason + \">\"\n",
+    "\n",
+    "            new_reasons[old_reason] = reason\n",
+    "\n",
+    "        for key in new_reasons.keys():\n",
+    "            print(new_reasons[key])\n",
+    "        accom_subset['reason'] = accom_subset['reason'].apply(lambda x: new_reasons[x])\n",
+    "        \n",
+    "        fig = px.bar(accom_subset, x = 'Percent of Total', y = 'reason', color = 'importance',\n",
+    "                    width = 1300, height = 600, orientation = 'h',\n",
+    "                    hover_data = ['responses','Percent of Total'], text = 'Percent of Total', facet_col = 'industry',\n",
+    "                    facet_col_spacing=0.18\n",
+    "                )\n",
+    "        fig.update_layout(title = 'Reasons for Starting a Company')\n",
+    "        fig.update_layout(yaxis_title = None)\n",
+    "\n",
+    "        fig.update_traces(textposition = 'inside', insidetextanchor = 'middle', textfont = {'color': 'white'})\n",
+    "        fig.update_yaxes(side = 'right')\n",
+    "        fig.update_xaxes(ticks = 'outside')\n",
+    "        fig.update_layout(title_y = .98, title_x = 0.003, title_font_size = 22)\n",
+    "        fig.update_layout(xaxis_title = \"Percent of Total\", uniformtext_minsize = 13,\n",
+    "                         uniformtext_mode = 'hide', paper_bgcolor = 'white', plot_bgcolor = 'white',\n",
+    "                         legend = dict(orientation = 'h', x=0,y=1.15, font = dict(size=13)))\n",
+    "        fig.update_layout(margin={\"r\":0,\"t\":90,\"l\":0,\"b\": 90}, dragmode = False)\n",
+    "\n",
+    "        fig.for_each_annotation(lambda a: a.update(text=a.text.split(\"=\")[1]))\n",
+    "\n",
+    "        fig.add_annotation(\n",
+    "                text = (f\"Created by: Jed Dryer | {today} | Source: US Census - 2019 ABS\"),\n",
+    "                showarrow=False,\n",
+    "                x = .70,\n",
+    "                y = -.19,\n",
+    "                xref='paper',\n",
+    "                yref='paper' ,\n",
+    "                xanchor='left',\n",
+    "                yanchor='bottom',\n",
+    "                xshift=-1,\n",
+    "                yshift=-3,\n",
+    "                font=dict(size=10, color=\"grey\"),\n",
+    "                align=\"right\",\n",
+    "                )\n",
+    "\n",
+    "        fig.write_html('stacked_reasons.html')\n",
+    "        print(\"Jed's Stacked Bar Chart Successfully exported to HTML - Filename: 'stacked_reasons.html'\")\n",
     "    \n",
     "    def build_bar_chart():\n",
     "        subset = bus_tech_df[(bus_tech_df['industry'] == 'Total for all sectors')][['name','firmpdemp','techuse_label']]\n",
@@ -1306,6 +1453,7 @@
     "        \n",
     "    build_maps()    \n",
     "    build_bar_chart()\n",
+    "    stacked_bar()\n",
     "    \n",
     "    \n",
     "# run my visual function and pass in the dataframe\n",
