--- a/jeds_visualizations.ipynb
+++ b/jeds_visualizations.ipynb
@@ -338,23 +338,9 @@
   {
    "cell_type": "code",
    "execution_count": 556,
-   "id": "4ae6a0fd-cfdd-49f4-a6a1-056c96f19b71",
+   "id": "68fc2683-bcf7-4134-818d-c6e55ee3721e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Work\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:5039: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reason_owned = bus_own_df[\n",
     "    (bus_own_df['qdesc_label'] == 'REASONOWN') &\n",
@@ -380,49 +366,8 @@
     "accom_subset = grouped_reason[(grouped_reason['industry'].str.contains('inanc|ducati'))]\n",
     "accom_subset.sort_values(by = ['importance','ratio'], ascending = False, inplace = True)\n",
     "accom_subset.rename(columns = {'ratio': 'Percent of Total'}, inplace = True)\n",
-    "picked_industry = accom_subset['industry'].unique().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 557,
-   "id": "5cd55168-d5e3-4774-8e7d-b9dd780ca5ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "< - Balance work and family - ->\n",
-      "<  - Best avenue for ideas -  ->\n",
-      "< - Carry on family business - >\n",
-      "<-  - Couldn't find a job -  -->\n",
-      "<-  -  - Flexible hours -  -  ->\n",
-      "< Friend or family role model ->\n",
-      "<-  -  - Greater income -  -  ->\n",
-      "< -  - Help my community -  - ->\n",
-      "< -  -  -  - Other -  -  -  - ->\n",
-      "<  - Start my own business -  ->\n",
-      "< - Wanted to be my own boss - >\n",
-      "<-  -  - Work for self -  -  -->\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Work\\AppData\\Local\\Temp/ipykernel_23740/1238197172.py:26: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
+    "picked_industry = accom_subset['industry'].unique().tolist()\n",
+    "\n",
     "reasons = grouped_reason.reason.unique().tolist()\n",
     "longest_reason = max(reasons, key = len)\n",
     "longest_reason = \"<\" + longest_reason + \">\"\n",
@@ -458,42 +403,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def stacked_bar():\n",
+    "    fig = px.bar(accom_subset, x = 'Percent of Total', y = 'reason', color = 'importance',\n",
+    "                width = 1300, height = 600, orientation = 'h',\n",
+    "                hover_data = ['responses','Percent of Total'], text = 'Percent of Total', facet_col = 'industry',\n",
+    "                facet_col_spacing=0.18\n",
+    "            )\n",
+    "    fig.update_layout(title = 'Reasons for Starting a Company')\n",
+    "    fig.update_layout(yaxis_title = None)\n",
     "\n",
-    "fig = px.bar(accom_subset, x = 'Percent of Total', y = 'reason', color = 'importance',\n",
-    "            width = 1300, height = 600, orientation = 'h',\n",
-    "            hover_data = ['responses','Percent of Total'], text = 'Percent of Total', facet_col = 'industry',\n",
-    "            facet_col_spacing=0.18\n",
-    "        )\n",
-    "fig.update_layout(title = 'Reasons for Starting a Company')\n",
-    "fig.update_layout(yaxis_title = None)\n",
+    "    fig.update_traces(textposition = 'inside', insidetextanchor = 'middle', textfont = {'color': 'white'})\n",
+    "    fig.update_yaxes(side = 'right')\n",
+    "    fig.update_xaxes(ticks = 'outside')\n",
+    "    fig.update_layout(title_y = .98, title_x = 0.003, title_font_size = 22)\n",
+    "    fig.update_layout(xaxis_title = \"Percent of Total\", uniformtext_minsize = 13,\n",
+    "                     uniformtext_mode = 'hide', paper_bgcolor = 'white', plot_bgcolor = 'white',\n",
+    "                     legend = dict(orientation = 'h', x=0,y=1.15, font = dict(size=13)))\n",
+    "    fig.update_layout(margin={\"r\":0,\"t\":90,\"l\":0,\"b\": 90}, dragmode = False)\n",
     "\n",
-    "fig.update_traces(textposition = 'inside', insidetextanchor = 'middle', textfont = {'color': 'white'})\n",
-    "fig.update_yaxes(side = 'right')\n",
-    "fig.update_xaxes(ticks = 'outside')\n",
-    "fig.update_layout(title_y = .98, title_x = 0.003, title_font_size = 22)\n",
-    "fig.update_layout(xaxis_title = \"Percent of Total\", uniformtext_minsize = 13,\n",
-    "                 uniformtext_mode = 'hide', paper_bgcolor = 'white', plot_bgcolor = 'white',\n",
-    "                 legend = dict(orientation = 'h', x=0,y=1.15, font = dict(size=13)))\n",
-    "fig.update_layout(margin={\"r\":0,\"t\":90,\"l\":0,\"b\": 90}, dragmode = False)\n",
+    "    fig.for_each_annotation(lambda a: a.update(text=a.text.split(\"=\")[1]))\n",
     "\n",
-    "fig.for_each_annotation(lambda a: a.update(text=a.text.split(\"=\")[1]))\n",
+    "    fig.add_annotation(\n",
+    "            text = (f\"Created by: Jed Dryer | {today} | Source: US Census - 2019 ABS\"),\n",
+    "            showarrow=False,\n",
+    "            x = .70,\n",
+    "            y = -.19,\n",
+    "            xref='paper',\n",
+    "            yref='paper' ,\n",
+    "            xanchor='left',\n",
+    "            yanchor='bottom',\n",
+    "            xshift=-1,\n",
+    "            yshift=-3,\n",
+    "            font=dict(size=10, color=\"grey\"),\n",
+    "            align=\"right\",\n",
+    "            )\n",
     "\n",
-    "fig.add_annotation(\n",
-    "        text = (f\"Created by: Jed Dryer | {today} | Source: US Census - 2019 ABS\"),\n",
-    "        showarrow=False,\n",
-    "        x = .70,\n",
-    "        y = -.19,\n",
-    "        xref='paper',\n",
-    "        yref='paper' ,\n",
-    "        xanchor='left',\n",
-    "        yanchor='bottom',\n",
-    "        xshift=-1,\n",
-    "        yshift=-3,\n",
-    "        font=dict(size=10, color=\"grey\"),\n",
-    "        align=\"right\",\n",
-    "        )\n",
-    "\n",
-    "fig.write_html('stacked_reasons.html')"
+    "    fig.write_html('stacked_reasons.html')"
    ]
   },
   {
