--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -404,7 +404,7 @@
     "    f'https://api.census.gov/data/2018/abscbo?get={variable_dict[2]}&for=us:*&for=QDESC_LABEL=YRACQBUS',\n",
     "    f'https://api.census.gov/data/2018/abstcb?get={variable_dict[3]}&for=state:*',\n",
     "    f'https://api.census.gov/data/2018/abscbo?get={variable_dict[2]}&for=state:*&OWNCHAR=CG&NAICS2017=00&QDESC=O02',\n",
-    "    f'https://api.census.gov/data/2018/abscs?get={variable_dict[0]},FIRMPDEMP&for=us:*'  #JAKE ADDED THIS\n",
+    "    f'https://api.census.gov/data/2018/abscs?get={variable_dict[0]}&for=us:*' #<-Jed removed extra variable from here\n",
     "]\n",
     "\n",
     "def get_data_frame(url):\n",
@@ -417,7 +417,7 @@
     "bus_own_df = get_data_frame(links[2]) # Business Owners (National Level)\n",
     "bus_tech_df = get_data_frame(links[3]) # Business Tech   \n",
     "slbo = get_data_frame(links[4]) # Business Owners (State Level)\n",
-    "comp_sum_natl_df = get_data_frame(links[5]) #Company Summary National   JAKE ADDED THIS"
+    "comp_sum_natl_df = get_data_frame(links[5]) #Company Summary National"
    ]
   },
   {
@@ -799,29 +799,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50dc481c",
+   "cell_type": "markdown",
+   "id": "cf541afc-9dd1-406d-b85f-4bac2981c41e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Jed's Visuals"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "7c8d6ea9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jed's Maps Successfully Exported to HTML -- Filename: 'company_pay_maps.html'\n",
-      "Jed's Bar Chart Built and Saved -- Filename: 'pop_tech.png'\n",
-      "Jed's Stacked Bar Chart Successfully exported to HTML - Filename: 'stacked_reasons.html'\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "def jeds_visuals():\n",
     "    today = dt.datetime.strftime(\n",
@@ -974,11 +966,26 @@
     "\n",
     "    \n",
     "    def build_bar_chart():\n",
-    "        subset = bus_tech_df[(bus_tech_df['industry'] == 'Total for all sectors')][['name','firmpdemp','techuse_label']]\n",
-    "        subset[['tech','usage']] = subset.apply(lambda row: row['techuse_label'].split(\":\"), axis = 1, result_type = 'expand')\n",
+    "        \"\"\" This function builds a simple bar chart and saves it to a file. \"\"\"\n",
+    "        \n",
+    "        # Get a subset of the business tech_df.\n",
+    "        subset = bus_tech_df[\n",
+    "            (bus_tech_df['industry'] == 'Total for all sectors'\n",
+    "            )\n",
+    "        ][['name','firmpdemp','techuse_label']]\n",
+    "        \n",
+    "        # Split the technology label into two distinct columns and then filter.\n",
+    "        subset[['tech','usage']] = subset.apply(\n",
+    "            lambda row: row['techuse_label'].split(\":\"), axis = 1, result_type = 'expand'\n",
+    "        )\n",
     "        subset = subset[(subset['usage'].str.contains('Total R|High'))]\n",
     "        subset = subset[(subset['name']) == 'Minnesota'][['firmpdemp','tech','usage']]\n",
-    "        subset['total_respondents'] = subset.groupby(by = ['tech'])['firmpdemp'].transform('max')\n",
+    "        \n",
+    "        # Transform and aggregate data to determine total respondents and the rate of use.\n",
+    "        subset['total_respondents'] = subset.groupby(\n",
+    "            by = ['tech']\n",
+    "        )['firmpdemp'].transform('max')\n",
+    "        \n",
     "        subset = subset[(subset['usage'].str.contains('High use'))]\n",
     "        subset['rate_of_high_use'] = 100 * (subset['firmpdemp'] / subset['total_respondents'])\n",
     "        subset.sort_values(by = 'rate_of_high_use', ascending = False, inplace = True)\n",
@@ -1101,10 +1108,26 @@
     "        \n",
     "    build_maps()    \n",
     "    build_bar_chart()\n",
-    "    stacked_bar()\n",
-    "    \n",
-    "    \n",
-    "# run my visual function and pass in the dataframe\n",
+    "    stacked_bar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9857825f-8829-485d-ba00-ed4868cc1940",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jed's Maps Successfully Exported to HTML -- Filename: 'company_pay_maps.html'\n",
+      "Jed's Bar Chart Built and Saved -- Filename: 'pop_tech.png'\n",
+      "Jed's Stacked Bar Chart Successfully exported to HTML - Filename: 'stacked_reasons.html'\n"
+     ]
+    }
+   ],
+   "source": [
     "jeds_visuals() # <--- This is the code to create my visuals"
    ]
   },
